[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/player/states/BaseState.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player/states/StateManager.gd" type="Script" id=3]
[ext_resource path="res://assets/player/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/player/states/Idle.gd" type="Script" id=5]
[ext_resource path="res://assets/player/states/Move.gd" type="Script" id=6]
[ext_resource path="res://assets/player/states/Walk.gd" type="Script" id=7]
[ext_resource path="res://assets/player/states/Jump.gd" type="Script" id=8]
[ext_resource path="res://assets/player/states/Fall.gd" type="Script" id=9]
[ext_resource path="res://assets/player/states/Dash.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 150, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 200, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 250, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 300, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 100, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 150, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 200, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 250, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 300, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 50, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 100, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 50, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 50, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 100, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 150, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 200, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 250, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 300, 37, 50, 37 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "CrouchIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "JumpFall",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "JumpFlip",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "JumpRise",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "JumpSquat",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Running",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 5, 14 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 176, 224 )
collision_layer = 512
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
walk_speed = 80
sprint_speed = 120
friction = 0.3
air_friction = 0.025
dash_speed = 150
dash_length = 0.2
weapon_pickup_mask = 2
camera_zone_mask = 16

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 28 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 3 )
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 5 )
animation_name = "Idle"
jump_node = NodePath("../Jump")
fall_node = NodePath("../Fall")
walk_node = NodePath("../Walk")
dash_node = NodePath("../Dash")

[node name="Move" type="Node" parent="StateManager"]
script = ExtResource( 6 )
jump_node = NodePath("../Jump")
fall_node = NodePath("../Fall")
idle_node = NodePath("../Idle")
walk_node = NodePath("../Walk")
dash_node = NodePath("../Dash")

[node name="Jump" type="Node" parent="StateManager"]
script = ExtResource( 8 )
animation_name = "JumpRise"
fall_node = NodePath("../Fall")
walk_node = NodePath("../Walk")
idle_node = NodePath("../Idle")
dash_node = NodePath("../Dash")

[node name="Fall" type="Node" parent="StateManager"]
script = ExtResource( 9 )
animation_name = "JumpFall"
walk_node = NodePath("../Walk")
idle_node = NodePath("../Idle")
dash_node = NodePath("../Dash")

[node name="BaseState" type="Node" parent="StateManager"]
script = ExtResource( 1 )

[node name="Walk" type="Node" parent="StateManager"]
script = ExtResource( 7 )
animation_name = "Running"
jump_node = NodePath("../Jump")
fall_node = NodePath("../Fall")
idle_node = NodePath("../Idle")
walk_node = NodePath(".")
dash_node = NodePath("../Dash")

[node name="Dash" type="Node" parent="StateManager"]
script = ExtResource( 10 )
animation_name = "Dash"
fall_node = NodePath("../Fall")
walk_node = NodePath("../Walk")
idle_node = NodePath("../Idle")
jump_node = NodePath("../Jump")

[node name="DashInput" type="Timer" parent="StateManager"]
wait_time = 0.35
one_shot = true

[node name="DashCooldown" type="Timer" parent="StateManager"]
one_shot = true

[node name="DashTimer" type="Timer" parent="StateManager"]
one_shot = true

[node name="MinJumpTime" type="Timer" parent="StateManager"]
one_shot = true
